Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
6.4.0
-
None
-
-
7c5546a78b (qt/qtwebengine/dev) 7c5546a78b (qt/tqtc-qtwebengine/dev) 2656991bb2 (qt/qtwebengine/6.4) 2656991bb2 (qt/tqtc-qtwebengine/6.4) 2656991bb2 (qt/tqtc-qtwebengine/6.4.1) 2656991bb2 (qt/tqtc-qtwebengine/6.2)
Description
I have an app with a single QWebEngineView.
The user can freely choose whatever page they want to show in the view.
After a few switches, the view is "broken" and the page is only displayed on part of the QWebEngineView (see screenshots).
The issue was not present in Qt 6.3.2.
The issue does not seem to appear when there are multiple views and a single page per view (like the simplebrowser example).
I will attach a minimal example allowing to reproduce the issue.
The issue does not manifest right away, it requires to navigate and switch pages a couple of times, but I am always able to reproduce it in less than 30s.
When the issue occurs, the following errors are printed on stderr
[122840:122840:1010/192019.197506:ERROR:interface_endpoint_client.cc(687)] Message 1 rejected by interface blink.mojom.WidgetHost [122840:122840:1010/192019.197603:ERROR:interface_endpoint_client.cc(687)] Message 4 rejected by interface blink.mojom.WidgetHost